Version 2.5.3dev:

* Fixed a problem preventing mouse from working with SDL2 on Windows.

Version 2.5.2dev:

* Merged code from WinUAE 2800b18.
* SDL2 is now default on all platforms (make sdl=1 to override for now).
* Fixes to make the windows version compile with SDL2.
* Fixes for FS-UAE compilation with mingw-w32 4.6.3.
* fs-uae-device-helper has a new --events mode which continuously prints
  joystick events to stdout.

Version 2.5.1dev:

* Merged code from WinUAE 2710b12.
* Support for .scp floppy images [keirf].
* Drive sound and CDDA fixes for big-endian platforms.
* Fixed left trigger = toggle autofire.

Version 2.5.0dev:

* UAE core code updated from WinUAE 2.7.1b9.
* FS-UAE can use 256 kB chip RAM (and also 128 if you *really* want to).
* Inhibit screen saver / power saving when running FS-UAE on OS X.
* Allow short-hand --video-sync(=1/0) option
* Use floating point control register, output compiler warning when not.
* Added flush_log boolean option to flush log output after each log line.
* New UAE Native Interface (via built-in uaenative.library).
* Enforcer / AHI interface is added (but with a dummy AHI backend).
* Support for old WinUAE-style native calls.
* Code cleanup in UAE code to reduce the number of compiler warnings.
* Removed some unused source files from the source archive.
* Auto-generated source files are now auto-generated when compiling on all
  platforms, and not cached in the source archives any longer.
* Fixes to allow FS-UAE to be compiled with the lastest MinGW version.
* Updated translations: it [Speedvicio], es [albconde], da [tomse], nb.

Version 2.3.17:

* Remove old log file paths so they'll not be mistaken for current logs.
* Fix initial mute when option volume is set to 0.
* Updated translations: fi [Goingdown], pl [grimi], fr [Foul].
* (Launcher) Option download_file from DB does not have to be an archive.
* (Launcher) Fixed bug when doubleclicking on an URI in the floppy list.