@@ -1595,7 +1595,7 @@ uaecptr netdev_startup (uaecptr resaddr)
 	if (log_net)
 		write_log (_T("netdev_startup(0x%x)\n"), resaddr);
 	/* Build a struct Resident. This will set up and initialize
-	* the uaescsi.device */
+	* the uaenet.device */
 	put_word (resaddr + 0x0, 0x4AFC);
 	put_long (resaddr + 0x2, resaddr);
 	put_long (resaddr + 0x6, resaddr + 0x1A); /* Continue scan here */
@@ -1603,7 +1603,7 @@ uaecptr netdev_startup (uaecptr resaddr)
 	put_word (resaddr + 0xC, 0x0305); /* NT_DEVICE; pri 05 */
 	put_long (resaddr + 0xE, ROM_netdev_resname);
 	put_long (resaddr + 0x12, ROM_netdev_resid);
-	put_long (resaddr + 0x16, ROM_netdev_init); /* calls scsidev_init */
+	put_long (resaddr + 0x16, ROM_netdev_init); /* calls netdev_init */
 	resaddr += 0x1A;
 	return resaddr;
 }
